force-app/main/default/objects/State_Licenses__c/State_Licenses__c.object-meta.xml
<CustomObject>
    <description>Object within the Account to track number of license and address as part of ship to.</description>
    <label>State License</label>
    <nameField>
        <displayFormat>SLID-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>License</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>