force-app/main/default/objects/State_Licenses__c/fields/Adult_Use__c.field-meta.xml
<CustomField>
    <fullName>Adult_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Use</label>
    <type>Checkbox</type>
</CustomField>