force-app/main/default/objects/State_Licenses__c/fields/BCC_License_Search__c.field-meta.xml
<CustomField>
    <fullName>BCC_License_Search__c</fullName>
    <formula>HYPERLINK(&quot;https://online.bcc.ca.gov/bcc/customization/bcc/cap/licenseSearch.aspx&quot;, &quot;Click Here..&quot;, &quot;_blank&quot;)</formula>
    <inlineHelpText>Search in BCC</inlineHelpText>
    <label>BCC License Search</label>
    <type>Text</type>
</CustomField>