force-app/main/default/objects/State_Licenses__c/fields/bccLicenseType__c.field-meta.xml
<CustomField>
    <fullName>bccLicenseType__c</fullName>
    <label>BCC License Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>