force-app/main/default/objects/State_Licenses__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <label>Business Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>