force-app/main/default/objects/State_Licenses__c/fields/Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>Business_Structure__c</fullName>
    <label>Business Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Foreign Corporation</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>