force-app/main/default/objects/State_Licenses__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>State Licenses</relationshipLabel>
    <relationshipName>State_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>