force-app/main/default/objects/State_Licenses__c/fields/Default_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Default_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Warehouse</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>State Licenses</relationshipLabel>
    <relationshipName>State_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>