force-app/main/default/objects/State_Licenses__c/fields/Delivery_County__c.field-meta.xml
<CustomField>
    <fullName>Delivery_County__c</fullName>
    <label>Delivery County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_County</valueSetName>
    </valueSet>
</CustomField>