force-app/main/default/objects/State_Licenses__c/fields/Future_License_Expire__c.field-meta.xml
<CustomField>
    <fullName>Future_License_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future License Expire</label>
    <type>Checkbox</type>
</CustomField>