force-app/main/default/objects/State_Licenses__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>IF(TODAY() &gt;  License_Expiration_Date__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>