force-app/main/default/objects/State_Licenses__c/fields/License_Address__c.field-meta.xml
<CustomField>
    <fullName>License_Address__c</fullName>
    <label>License Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>