force-app/main/default/objects/State_Licenses__c/fields/License_City__c.field-meta.xml
<CustomField>
    <fullName>License_City__c</fullName>
    <label>License City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Cities</valueSetName>
    </valueSet>
</CustomField>