force-app/main/default/objects/State_Licenses__c/fields/License_Class__c.field-meta.xml
<CustomField>
    <fullName>License_Class__c</fullName>
    <inlineHelpText>License Classification:
Adult Use = A-License
Medicinal Use = M-License</inlineHelpText>
    <label>License Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-License</fullName>
            </value>
            <value>
                <fullName>M-License</fullName>
            </value>
            <value>
                <fullName>AM-License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>