force-app/main/default/objects/State_Licenses__c/fields/License_Country__c.field-meta.xml
<CustomField>
    <fullName>License_Country__c</fullName>
    <label>License Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>