force-app/main/default/objects/State_Licenses__c/fields/License_DBA__c.field-meta.xml
<CustomField>
    <fullName>License_DBA__c</fullName>
    <formula>License_Name__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License DBA</label>
    <type>Text</type>
</CustomField>