force-app/main/default/objects/State_Licenses__c/fields/License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration_Date__c</fullName>
    <inlineHelpText>License Expiration Date</inlineHelpText>
    <label>License Expiration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>