force-app/main/default/objects/State_Licenses__c/fields/License_Location__c.field-meta.xml
<CustomField>
    <fullName>License_Location__c</fullName>
    <label>License Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>