force-app/main/default/objects/State_Licenses__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <label>License Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>State Licenses</relationshipLabel>
    <relationshipName>State_Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>