force-app/main/default/objects/State_Licenses__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <inlineHelpText>State License Number</inlineHelpText>
    <label>License Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>