force-app/main/default/objects/State_Licenses__c/fields/License_State__c.field-meta.xml
<CustomField>
    <fullName>License_State__c</fullName>
    <label>License State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>