force-app/main/default/objects/State_Licenses__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>License_Type</valueSetName>
    </valueSet>
</CustomField>