force-app/main/default/objects/State_Licenses__c/fields/License_Zip__c.field-meta.xml
<CustomField>
    <fullName>License_Zip__c</fullName>
    <label>License Zip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>