force-app/main/default/objects/State_Licenses__c/fields/Medicinal__c.field-meta.xml
<CustomField>
    <fullName>Medicinal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medicinal</label>
    <type>Checkbox</type>
</CustomField>