force-app/main/default/objects/State_Licenses__c/fields/Premise_Address__c.field-meta.xml
<CustomField>
    <fullName>Premise_Address__c</fullName>
    <label>Premise Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>