force-app/main/default/objects/State_Licenses__c/fields/Premise_City__c.field-meta.xml
<CustomField>
    <fullName>Premise_City__c</fullName>
    <label>Premise City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>