force-app/main/default/objects/State_Licenses__c/fields/Premise_State__c.field-meta.xml
<CustomField>
    <fullName>Premise_State__c</fullName>
    <label>Premise State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>