force-app/main/default/objects/State_Licenses__c/fields/Premise_Zip__c.field-meta.xml
<CustomField>
    <fullName>Premise_Zip__c</fullName>
    <label>Premise Zip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>