force-app/main/default/objects/State_Licenses__c/fields/Secondary_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Warehouse</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>State Licenses (Secondary Warehouse)</relationshipLabel>
    <relationshipName>State_Licenses1</relationshipName>
    <type>Lookup</type>
</CustomField>