force-app/main/default/objects/State_Licenses__c/fields/State_License_Holder__c.field-meta.xml
<CustomField>
    <fullName>State_License_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Field display who is the state license holder.</inlineHelpText>
    <label>State License Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>State License Shared</relationshipLabel>
    <relationshipName>State_Licenses1</relationshipName>
    <type>Lookup</type>
</CustomField>