force-app/main/default/objects/State_Licenses__c/fields/Total_Miles__c.field-meta.xml
<CustomField>
    <fullName>Total_Miles__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total driving distance between default warehouse and licensee address</description>
    <inlineHelpText>Total driving distance between default warehouse and licensee address</inlineHelpText>
    <label>Total Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>