force-app/main/default/objects/State_Licenses__c/fields/Tri_Party_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Tri_Party_Agreement_Date__c</fullName>
    <inlineHelpText>Date in which a tri-party agreement was signed by license holder, financial interest and or controlling party along with distributor.</inlineHelpText>
    <label>Tri-Party Agreement Date</label>
    <type>Date</type>
</CustomField>