force-app/main/default/objects/State_Licenses__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <inlineHelpText>Territory assigned to delivery city based on state license.</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_County__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Zones</valueSetName>
    </valueSet>
</CustomField>