force-app/main/default/objects/State_Licenses__c/recordTypes/License_Holder.recordType-meta.xml
<RecordType>
    <fullName>License_Holder</fullName>
    <active>true</active>
    <label>License Holder</label>
</RecordType>