force-app/main/default/objects/State_Licenses__c/recordTypes/NonCannabis.recordType-meta.xml
<RecordType>
    <fullName>NonCannabis</fullName>
    <active>true</active>
    <description>Used for Non-Cannabis Purchases or Services.</description>
    <label>NonCannabis</label>
</RecordType>