force-app/main/default/objects/State_Licenses__c/recordTypes/White_Label.recordType-meta.xml
<RecordType>
    <fullName>White_Label</fullName>
    <active>true</active>
    <label>White Label</label>
</RecordType>