force-app/main/default/objects/State_Licenses__c/validationRules/No_Duplicate_License_Number_for_Sites.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Duplicate_License_Number_for_Sites</fullName>
    <active>true</active>
    <errorConditionFormula>License_Number__c &lt;&gt; License_Number__c</errorConditionFormula>
    <errorMessage>Duplicate License Number and License Class Not Allowed For Sites</errorMessage>
</ValidationRule>