force-app/main/default/objects/State_Licenses__c/listViews/Active_License_NH.listView-meta.xml
<ListView>
    <fullName>Active_License_NH</fullName>
    <columns>NAME</columns>
    <columns>License_Address__c</columns>
    <columns>License_City__c</columns>
    <columns>License_Status__c</columns>
    <columns>License_Class__c</columns>
    <columns>License_Country__c</columns>
    <columns>License_Expiration_Date__c</columns>
    <columns>License_Name__c</columns>
    <columns>License_Number__c</columns>
    <columns>License_State__c</columns>
    <columns>License_Type__c</columns>
    <columns>Total_Miles__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>License_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Default_Warehouse__c</field>
        <operation>equals</operation>
        <value>NHWCA</value>
    </filters>
    <label>Active License - NH</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>