force-app/main/default/objects/State_Licenses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>License_Status__c</columns>
    <columns>License_Name__c</columns>
    <columns>License_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Total_Miles__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>